--- a/biome.json
+++ b/biome.json
@@ -6,8 +6,7 @@
     "useIgnoreFile": true
   },
   "files": {
-    "ignoreUnknown": true,
-    "ignore": []
+    "ignoreUnknown": true
   },
   "formatter": {
     "enabled": true,
@@ -18,6 +17,7 @@
   },
   "linter": {
     "enabled": true,
+    "ignore": ["src/components/ui/*"],
     "rules": {
       "recommended": true
     }
